examples/errors/interface_method_not_impl/main.lc


interface Animal {

    printName(prefix: string);

}

class Tiger implements Animal {


}

function main() {
    const tiger = Tiger{};
}
